test-suite/typecheck/pass/generic_two_params.first
function pair<A, B>(a: A, b: B) -> A {
  return a;
}
function f() -> Int { return pair(1, "x"); }
