test-suite/typecheck/fail/field_not_in_record.first
type P = { x: Int, y: Int };
function f(p: P) -> Int {
  return p.z;
}
